# robsidian

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/fonts/: .gitkeep
plugins/example/: README.md  manifest.json
src/: app.rs  main.rs
src/core/: config.rs  document.rs  file_system.rs  mod.rs
src/plugin/: api.rs  loader.rs  manager.rs  mod.rs
src/terminal/: ansi.rs  buffer.rs  mod.rs  pty.rs  shell.rs
src/ui/: block_renderer.rs  editor.rs  file_tree.rs  live_preview.rs  markdown_blocks.rs  mod.rs  preview.rs  sidebar.rs  terminal.rs
